--- a/metadata.yaml
+++ b/metadata.yaml
@@ -55,6 +55,7 @@ subjects:
 - !lcsh 'Great Britain -- History -- Wars of the Roses, 1455-1485 -- Fiction'
 - !lcsh 'United States -- History -- Civil War, 1861-1865 -- Fiction'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: The deserter -- A day in the wilderness -- How Dickon came by his
   name -- Where Avon into Severn flows.
 title: 'The Deserter, and Other Stories: A Book of Two Wars'
